--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <logback.version>1.0.0</logback.version>
         <openwebbeans.version>1.1.4</openwebbeans.version>
         <pax.exam.version>3.0.0.M2</pax.exam.version>
-        <pax.swissbox.version>1.5.1-SNAPSHOT</pax.swissbox.version>
+        <pax.swissbox.version>1.5.1</pax.swissbox.version>
         <pax.url.version>1.4.0</pax.url.version>
         <slf4j.version>1.6.4</slf4j.version>
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
