--- a/pax-cdi-api/pom.xml
+++ b/pax-cdi-api/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>pax-cdi-api</artifactId>
     <packaging>bundle</packaging>
 
-    <name>OPS4J Pax CDI Extender Service</name>
+    <name>OPS4J Pax CDI Bean Bundle API</name>
     
     <properties>
         <bundle.symbolicName>org.ops4j.pax.cdi.api</bundle.symbolicName>
