--- a/pom.xml
+++ b/pom.xml
@@ -142,8 +142,44 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-servlet_3.0_spec</artifactId>
+                <version>1.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-jta_1.1_spec</artifactId>
+                <version>1.1.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-validation_1.0_spec</artifactId>
+                <version>1.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-interceptor_1.1_spec</artifactId>
+                <version>1.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-el_2.2_spec</artifactId>
+                <version>1.0.3</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
 
@@ -177,7 +213,17 @@
                 <version>${openwebbeans.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.geronimo.bundles</groupId>
+                <artifactId>scannotation</artifactId>
+                <version>1.0.2_1</version>
+            </dependency>
 
+            <dependency>
+                <groupId>org.apache.servicemix.bundles</groupId>
+                <artifactId>org.apache.servicemix.bundles.asm</artifactId>
+                <version>3.3.1_1</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -200,7 +246,7 @@
                     <version>2.3.7</version>
                     <extensions>true</extensions>
                     <configuration>
-                        <instructions>                           
+                        <instructions>
                             <_include>-osgi.bnd</_include>
                             <Bundle-DocURL>${pax.cdi.wiki.url}</Bundle-DocURL>
                         </instructions>
