--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,15 @@
                     <version>1.2</version>
                 </plugin>
 
+                <plugin>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <configuration>
+                       <arguments>-DpushChanges=false </arguments>
+                       <releaseProfiles>sonatype-oss-release</releaseProfiles> 
+                       <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
+                      <useReleaseProfile>true</useReleaseProfile>
+                    </configuration>
+                </plugin>
 
                 <!--This plugin's configuration is used to store Eclipse m2e settings 
                     only. It has no influence on the Maven build itself. -->
