--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>cdi</artifactId>
         <groupId>org.ops4j.pax</groupId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <groupId>org.ops4j.pax.cdi</groupId>
