--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.ops4j.pax</groupId>
     <artifactId>cdi</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.ops4j</groupId>
@@ -261,10 +262,10 @@
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
                     <configuration>
-                       <arguments>-DpushChanges=false </arguments>
-                       <releaseProfiles>sonatype-oss-release</releaseProfiles> 
-                       <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
-                      <useReleaseProfile>true</useReleaseProfile>
+                        <arguments>-DpushChanges=false</arguments>
+                        <preparationGoals>clean verify javadoc:jar</preparationGoals>
+                        <tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
+                        <useReleaseProfile>true</useReleaseProfile>
                     </configuration>
                 </plugin>
 
