--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,7 @@
 
                 <plugin>
                     <artifactId>maven-release-plugin</artifactId>
+                    <version>2.3.2</version>
                     <configuration>
                         <arguments>-DoverrideParentPom</arguments>
                         <preparationGoals>clean verify javadoc:jar</preparationGoals>
