--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.ops4j.pax</groupId>
     <artifactId>cdi</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.ops4j</groupId>
@@ -27,7 +27,8 @@
         <connection>scm:git:git@github.com:ops4j/org.ops4j.pax.cdi.git</connection>
         <developerConnection>scm:git:git@github.com:ops4j/org.ops4j.pax.cdi.git</developerConnection>
         <url>git@github.com:ops4j/org.ops4j.pax.cdi.git</url>
-    </scm>
+      <tag>cdi-0.1.0</tag>
+  </scm>
 
     <modules>
         <module>pax-cdi-extender</module>
