--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.ops4j.pax</groupId>
     <artifactId>cdi</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.ops4j</groupId>
@@ -27,7 +27,7 @@
         <connection>scm:git:git@github.com:ops4j/org.ops4j.pax.cdi.git</connection>
         <developerConnection>scm:git:git@github.com:ops4j/org.ops4j.pax.cdi.git</developerConnection>
         <url>git@github.com:ops4j/org.ops4j.pax.cdi.git</url>
-      <tag>cdi-0.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <modules>
@@ -263,7 +263,7 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.3.2</version>
                     <configuration>
-                        <arguments>-DoverrideParentPom</arguments>
+                        <arguments>-Dgpg.passphrase=${passphrase}</arguments>
                         <preparationGoals>clean verify javadoc:jar</preparationGoals>
                         <pushChanges>false</pushChanges>
                         <releaseProfiles>sonatype-oss-release</releaseProfiles>
