--- a/pax-cdi-itest-weld/pom.xml
+++ b/pax-cdi-itest-weld/pom.xml
@@ -1,15 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>cdi</artifactId>
         <groupId>org.ops4j.pax</groupId>
+        <artifactId>cdi</artifactId>
         <version>0.2.0-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
     <groupId>org.ops4j.pax.cdi</groupId>
-    <artifactId>pax-cdi-itest</artifactId>
-
-    <name>OPS4J Pax CDI Integration Tests</name>
+    <artifactId>pax-cdi-itest-weld</artifactId>
+    
+    <name>OPS4J Pax CDI Weld Integration Tests</name>
 
     <dependencies>
 
@@ -51,13 +51,6 @@
         <dependency>
             <groupId>org.ops4j.pax.cdi</groupId>
             <artifactId>pax-cdi-extension</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.ops4j.pax.cdi</groupId>
-            <artifactId>pax-cdi-openwebbeans</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
