--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <logback.version>1.0.0</logback.version>
-        <openwebbeans.version>1.1.4</openwebbeans.version>
+        <openwebbeans.version>1.1.5-SNAPSHOT</openwebbeans.version>
         <pax.exam.version>3.0.0.M2</pax.exam.version>
         <pax.swissbox.version>1.5.1</pax.swissbox.version>
         <pax.url.version>1.4.0</pax.url.version>
