--- a/pax-cdi-extender/pom.xml
+++ b/pax-cdi-extender/pom.xml
@@ -77,8 +77,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-                        <Bundle-Activator>org.ops4j.pax.cdi.impl.Activator</Bundle-Activator>
-                        <Import-Package>org.ops4j.pax.cdi.api,  *</Import-Package>
+                        <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
                     </instructions>
                 </configuration>
             </plugin>
