--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <module>pax-cdi-itest</module>
         <module>pax-cdi-extension</module>
         <module>pax-cdi-api</module>
+        <module>pax-cdi-web</module>
     </modules>
 
     <profiles>
@@ -341,6 +342,19 @@
                                     </pluginExecutionFilter>
                                     <action>
                                         <ignore />
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.apache.felix</groupId>
+                                        <artifactId>maven-bundle-plugin</artifactId>
+                                        <versionRange>[2.3.7,)</versionRange>
+                                        <goals>
+                                            <goal>manifest</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
