[PAXCDI-3] Opt-in mechanism
Use manifest header Pax-ManagedBeans as opt-in marker.

--- a/pax-cdi-samples/pax-cdi-sample1/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1/pom.xml
@@ -46,6 +46,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample1</Bundle-SymbolicName>
+                        <Pax-ManagedBeans>META-INF/beans.xml</Pax-ManagedBeans>
                     </instructions>
                 </configuration>
             </plugin>
