--- a/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
@@ -51,6 +51,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample1.client</Bundle-SymbolicName>
+                        <Pax-ManagedBeans>META-INF/beans.xml</Pax-ManagedBeans>
                     </instructions>
                 </configuration>
             </plugin>
