--- a/pax-cdi-itest-weld/pom.xml
+++ b/pax-cdi-itest-weld/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>org.ops4j.pax.cdi</groupId>
     <artifactId>pax-cdi-itest-weld</artifactId>
-    
+
     <name>OPS4J Pax CDI Weld Integration Tests</name>
 
     <dependencies>
@@ -70,6 +70,28 @@
         </dependency>
 
         <dependency>
+            <groupId>org.ops4j.pax.cdi</groupId>
+            <artifactId>pax-cdi-web-weld</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.ops4j.pax.web</groupId>
+            <artifactId>pax-web-jetty</artifactId>
+            <version>2.1.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty.aggregate</groupId>
+            <artifactId>jetty-all-server</artifactId>
+            <version>8.1.4.v20120524</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.apache.geronimo.bundles</groupId>
             <artifactId>scannotation</artifactId>
             <scope>provided</scope>
@@ -129,50 +151,50 @@
             <artifactId>pax-url-wrap</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-spi</artifactId>
             <version>2.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-api</artifactId>
             <version>2.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-extender-war</artifactId>
             <version>2.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-extender-war</artifactId>
             <version>2.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-jetty</artifactId>
             <version>2.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-runtime</artifactId>
             <version>2.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        
-        
+
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
