--- a/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
@@ -14,13 +14,12 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
-            <artifactId>geronimo-servlet_3.0_spec</artifactId>
+            <artifactId>geronimo-atinject_1.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-osgi-bundle</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-servlet_3.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
@@ -36,7 +35,6 @@
                         <_wab>src/main/webapp/</_wab>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
-                        <!--Import-Package>org.apache.webbeans.servlet, *</Import-Package-->
                         <Web-ContextPath>ice</Web-ContextPath>
                         <Pax-ManagedBeans>WEB-INF/beans.xml</Pax-ManagedBeans>
                     </instructions>
