--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>cdi</artifactId>
@@ -16,7 +17,14 @@
         <module>pax-cdi-sample1</module>
         <module>pax-cdi-sample1-client</module>
         <module>pax-cdi-sample1-web</module>
-        <module>pax-cdi-jetty-weld-war</module>
     </modules>
-    
+
+    <profiles>
+        <profile>
+            <id>weld</id>
+            <modules>
+                <module>pax-cdi-jetty-weld-war</module>
+            </modules>
+        </profile>
+    </profiles>
 </project>
