--- a/pax-cdi-itest/pom.xml
+++ b/pax-cdi-itest/pom.xml
@@ -124,14 +124,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- for debugging -->
-        <dependency>
-            <groupId>org.ops4j.pax.web</groupId>
-            <artifactId>pax-web-extender-war</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -223,4 +215,20 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>weld</id>
+            <dependencies>
+                
+                <!-- for debugging -->
+                <dependency>
+                    <groupId>org.ops4j.pax.web</groupId>
+                    <artifactId>pax-web-extender-war</artifactId>
+                    <version>2.1.0-SNAPSHOT</version>
+                    <scope>provided</scope>
+                </dependency>
+
+            </dependencies>
+        </profile>
+    </profiles>
 </project>
