--- a/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
@@ -10,6 +10,7 @@
     <artifactId>pax-cdi-sample1-web</artifactId>
     <packaging>bundle</packaging>
 
+    <name>OPS4J Pax CDI Sample1 WAB</name>
 
     <dependencies>
         <dependency>
