--- a/pax-cdi-itest-weld/pom.xml
+++ b/pax-cdi-itest-weld/pom.xml
@@ -280,6 +280,13 @@
                     <version>2.1.0-SNAPSHOT</version>
                     <scope>provided</scope>
                 </dependency>
+                
+                <dependency>
+                    <groupId>com.sun.jersey</groupId>
+                    <artifactId>jersey-client</artifactId>
+                    <version>1.13</version>
+                    <scope>test</scope>
+                </dependency>
 
             </dependencies>
         </profile>
