--- a/pax-cdi-itest-weld/pom.xml
+++ b/pax-cdi-itest-weld/pom.xml
@@ -235,7 +235,7 @@
                 <dependency>
                     <groupId>org.ops4j.pax.web</groupId>
                     <artifactId>pax-web-jetty</artifactId>
-                    <version>2.1.0-SNAPSHOT</version>
+                    <version>${pax.web.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
@@ -249,35 +249,35 @@
                 <dependency>
                     <groupId>org.ops4j.pax.web</groupId>
                     <artifactId>pax-web-spi</artifactId>
-                    <version>2.1.0-SNAPSHOT</version>
+                    <version>${pax.web.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
                 <dependency>
                     <groupId>org.ops4j.pax.web</groupId>
                     <artifactId>pax-web-api</artifactId>
-                    <version>2.1.0-SNAPSHOT</version>
+                    <version>${pax.web.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
                 <dependency>
                     <groupId>org.ops4j.pax.web</groupId>
                     <artifactId>pax-web-extender-war</artifactId>
-                    <version>2.1.0-SNAPSHOT</version>
+                    <version>${pax.web.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
                 <dependency>
                     <groupId>org.ops4j.pax.web</groupId>
                     <artifactId>pax-web-jetty</artifactId>
-                    <version>2.1.0-SNAPSHOT</version>
+                    <version>${pax.web.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
                 <dependency>
                     <groupId>org.ops4j.pax.web</groupId>
                     <artifactId>pax-web-runtime</artifactId>
-                    <version>2.1.0-SNAPSHOT</version>
+                    <version>${pax.web.version}</version>
                     <scope>provided</scope>
                 </dependency>
                 
@@ -285,7 +285,6 @@
                     <groupId>com.sun.jersey</groupId>
                     <artifactId>jersey-client</artifactId>
                     <version>1.13</version>
-                    <scope>test</scope>
                 </dependency>
 
             </dependencies>
