--- a/pax-cdi-itest/pom.xml
+++ b/pax-cdi-itest/pom.xml
@@ -224,7 +224,7 @@
                 <dependency>
                     <groupId>org.ops4j.pax.web</groupId>
                     <artifactId>pax-web-extender-war</artifactId>
-                    <version>2.1.0-SNAPSHOT</version>
+                    <version>${pax.web.version}</version>
                     <scope>provided</scope>
                 </dependency>
 
