--- a/pax-cdi-web/pom.xml
+++ b/pax-cdi-web/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
             <artifactId>pax-web-api</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
+            <version>${pax.web.version}</version>
         </dependency>
 
         <dependency>
