--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <pax.exam.version>3.0.0.M3</pax.exam.version>
         <pax.swissbox.version>1.5.1</pax.swissbox.version>
         <pax.url.version>1.4.0</pax.url.version>
+        <pax.web.version>3.0.0-SNAPSHOT</pax.web.version>
         <slf4j.version>1.6.4</slf4j.version>
         <weld.version>1.2.0-SNAPSHOT</weld.version>
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
