--- a/pax-cdi-web-openwebbeans/pom.xml
+++ b/pax-cdi-web-openwebbeans/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>cdi</artifactId>
         <version>0.3.0-SNAPSHOT</version>
     </parent>
+    <groupId>org.ops4j.pax.cdi</groupId>
     <artifactId>pax-cdi-web-openwebbeans</artifactId>
     <packaging>bundle</packaging>
 
