[PAXCDI-21] BundleMetaDataScannerService does not discover all beans from imported packages
Created new BeanScanner, used by OWB and Weld adapters. xbean-finder
dependency no longer required.

--- a/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
+++ b/pax-cdi-openwebbeans/src/main/resources/META-INF/openwebbeans/openwebbeans.properties
@@ -43,7 +43,7 @@ org.apache.webbeans.spi.JNDIService=org.apache.webbeans.corespi.se.DefaultJndiSe
 ################################### Default Scanner Service ####################################
 #Default implementation of org.apache.webbeans.corespi.ScannerService.
 #org.apache.webbeans.spi.ScannerService=org.apache.webbeans.corespi.se.DefaultScannerService
-org.apache.webbeans.spi.ScannerService=org.ops4j.pax.cdi.openwebbeans.impl.BundleMetaDataScannerService
+org.apache.webbeans.spi.ScannerService=org.ops4j.pax.cdi.openwebbeans.impl.BundleScannerService
 ################################################################################################
 
 ################################### Default EL Adaptor ####################################
