[PAXCDI-23] JPA sample, using DeltaSpike @Transactional

--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -16,6 +16,7 @@
         <module>pax-cdi-sample1</module>
         <module>pax-cdi-sample1-client</module>
         <module>pax-cdi-sample1-web</module>
+        <module>pax-cdi-sample2-service</module>
     </modules>
 
     <profiles>
