[PAXCDI-27] BundleLoaderService ensures that only loadable extensions are considered by Pax CDI. This excludes resources that happen to be on the system classpath, but not in a bundle.

--- a/pax-cdi-web-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
+++ b/pax-cdi-web-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
@@ -49,8 +49,8 @@ org.apache.webbeans.spi.SecurityService=org.apache.webbeans.corespi.security.Sim
 
 ################################ Default Implementation-Loader Service ###########################################
 # Service which encapsulates the Service-Loader of Java 1.6+ to allow custom implementations to support Java 1.5
-org.apache.webbeans.spi.LoaderService=org.apache.webbeans.service.DefaultLoaderService
 #org.apache.webbeans.spi.LoaderService=org.apache.webbeans.service.DefaultLoaderService
+org.apache.webbeans.spi.LoaderService=org.ops4j.pax.cdi.openwebbeans.impl.BundleLoaderService
 
 ################################################################################################ 
 #################################### SEVERAL CONFIGURATION PARAMETERS ##########################
