--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
     <properties>
         <logback.version>1.0.0</logback.version>
         <openwebbeans.version>1.1.5</openwebbeans.version>
-        <pax.exam.version>3.0.0.M3</pax.exam.version>
+        <ops4j.base.version>1.4.0-SNAPSHOT</ops4j.base.version>
+        <pax.exam.version>3.0.0-SNAPSHOT</pax.exam.version>
         <pax.swissbox.version>1.5.1</pax.swissbox.version>
         <pax.url.version>1.5.0</pax.url.version>
         <pax.web.version>3.0.0-SNAPSHOT</pax.web.version>
@@ -141,6 +142,12 @@
                 <groupId>org.ops4j.pax.url</groupId>
                 <artifactId>pax-url-wrap</artifactId>
                 <version>${pax.url.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.ops4j.base</groupId>
+                <artifactId>ops4j-base-spi</artifactId>
+                <version>${ops4j.base.version}</version>
             </dependency>
 
             <dependency>
