[PAXCDI-27] META-INF/services manipulation factored out to OPS4J Base

--- a/pax-cdi-openwebbeans/pom.xml
+++ b/pax-cdi-openwebbeans/pom.xml
@@ -26,6 +26,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.ops4j.base</groupId>
+            <artifactId>ops4j-base-spi</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.openwebbeans</groupId>
             <artifactId>openwebbeans-spi</artifactId>
         </dependency>
