--- a/pax-cdi-checkstyle-rules/pom.xml
+++ b/pax-cdi-checkstyle-rules/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>cdi</artifactId>
     <version>0.3.0-SNAPSHOT</version>    
   </parent>
+  <groupId>org.ops4j.pax.cdi</groupId>
   <artifactId>pax-cdi-checkstyle-rules</artifactId>
   <name>OPS4J Pax CDI Checkstyle Rules</name>
 </project>
