[PAXCDI-23] moved TransactionalTest and JPA sample to Maven profile "experimental" due to external snapshot dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@
         <module>pax-cdi-web-openwebbeans</module>
     </modules>
 
+    <profiles>
+        <profile>
+            <id>experimental</id>
+            <modules>
+                <module>pax-cdi-itest-jpa</module>
+            </modules>
+        </profile>
+    </profiles>
+
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
