[PAXCDI-19] JSR-299 TCK porting package
First shot, running just a single class from the TCK with OWB.

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
                 <module>pax-cdi-itest-jpa</module>
             </modules>
         </profile>
+        <profile>
+            <id>tck</id>
+            <modules>
+                <module>tck</module>
+            </modules>
+        </profile>
     </profiles>
 
     <licenses>
