--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -17,7 +17,7 @@
         <openwebbeans.version>1.1.7</openwebbeans.version>
         <ops4j.base.version>1.4.0</ops4j.base.version>
         <pax.exam.version>3.0.0.RC1</pax.exam.version>
-        <pax.swissbox.version>1.5.1</pax.swissbox.version>
+        <pax.swissbox.version>1.6.0</pax.swissbox.version>
         <pax.url.version>1.5.0</pax.url.version>
         <pax.web.version>3.0.0.M1</pax.web.version>
         <slf4j.version>1.6.4</slf4j.version>
@@ -42,7 +42,7 @@
 
             <dependency>
                 <groupId>org.ops4j.pax.swissbox</groupId>
-                <artifactId>pax-swissbox-framework</artifactId>
+                <artifactId>pax-swissbox-tracker</artifactId>
                 <version>${pax.swissbox.version}</version>
             </dependency>
 
